--- a/S01/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
+++ b/S01/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -923,12 +923,12 @@
     "    elif len(each) == 4:\n",
     "        age[key]= each[:1] + '-' + each[2:]\n",
     "        \n",
-    "df_tidy_5['age']=age"
+    "df_tidy_5['age']= age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1142,17 +1142,13 @@
    "source": [
     "# Create a new version of df_tidy_5 where the cases missing values are replaced with the mean\n",
     "df_tidy_6 = df_tidy_5.copy()\n",
-    "mean_cases= df_tidy_6['cases'].mean()\n",
-    "case=df_tidy_6['cases'].tolist()\n",
-    "for each in case:\n",
-    "    if each == 'NaN':\n",
-    "        case[each]=mean_cases\n",
-    "df_tidy_6['cases']=case"
+    "\n",
+    "df_tidy_6.cases= df_tidy_6.cases.fillna(df_tidy_6.cases.mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1210,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1234,16 +1230,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>cases</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>AD</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0-14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  country  year  cases gender   age\n",
+       "0      AD  1989    NaN      m  0-14\n",
+       "1      AD  1990    NaN      m  0-14\n",
+       "2      AD  1991    NaN      m  0-14\n",
+       "3      AD  1992    NaN      m  0-14\n",
+       "4      AD  1993    NaN      m  0-14\n",
+       "5      AD  1994    NaN      m  0-14\n",
+       "6      AD  1996    0.0      m  0-14\n",
+       "7      AD  1997    0.0      m  0-14\n",
+       "8      AD  1998    0.0      m  0-14\n",
+       "9      AD  1999    0.0      m  0-14"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top_cases"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1256,7 +1384,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "The dataframe is not correct.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-33-c4895c4654a8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0merror_msg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"The dataframe is not correct.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mcheck1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'fed1d872f6d540f4118582ec694270274e987b12f5dfe2057dddf1e12df2761a'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtop_cases\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'country'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mcheck1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merror_msg\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m: The dataframe is not correct."
+     ]
+    }
+   ],
    "source": [
     "assert isinstance(top_cases, pd.DataFrame), \"top_cases should be a pandas DataFrame.\"\n",
     "\n",
@@ -1289,6 +1429,13 @@
     "\n",
     "Take some time to discuss with a coleague sitting next to you, what would be a better way to impute missing values in this dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
