--- a/S01/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
+++ b/S01/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -913,22 +913,26 @@
     "# df_tidy_5 = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "df_tidy_5= df_tidy_4.copy()\n",
-    "\n",
-    "age=df_tidy_5['age'].tolist()\n",
+    "age= df_tidy_4.age.tolist()\n",
     "\n",
     "for key, each in enumerate(age):\n",
     "    if len(each) == 3:\n",
-    "        age[key]=each[0] + '-' + each[1:]\n",
+    "        age[key]= each[0] + '-' + each[1:]\n",
     "    elif len(each) == 4:\n",
     "        age[key]= each[:1] + '-' + each[2:]\n",
-    "        \n",
-    "df_tidy_5['age']= age"
+    "    elif each == 'u':\n",
+    "        pass\n",
+    "    elif each >= '65':\n",
+    "        age[key] = '65+'\n",
+    "    \n",
+    "df_tidy_5= df_tidy_4.copy()\n",
+    "df_tidy_5['age']= age\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -980,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1002,7 +1006,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duplicates_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1127,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1148,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1206,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1224,13 +1248,13 @@
     "\n",
     "# YOUR CODE HERE\n",
     "df_tidy_5.sort_values(by='cases', ascending=False).set_index('cases')\n",
-    "df_tidy_5['country'].drop_duplicates()\n",
-    "top_cases=df_tidy_5.head(n=10)"
+    "df_tidy_5.drop_duplicates(subset='country', keep='first')\n",
+    "top_cases=df_tidy_5.drop_duplicates(subset='country', keep='last').head(n=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1263,104 +1287,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>86553</th>\n",
        "      <td>AD</td>\n",
-       "      <td>1989</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AD</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AD</td>\n",
-       "      <td>1991</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AD</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AD</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>AD</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>AD</td>\n",
-       "      <td>1996</td>\n",
+       "      <td>2008</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>AD</td>\n",
-       "      <td>1997</td>\n",
+       "      <th>86579</th>\n",
+       "      <td>AE</td>\n",
+       "      <td>2008</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AD</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
+       "      <th>86603</th>\n",
+       "      <td>AF</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>AD</td>\n",
-       "      <td>1999</td>\n",
+       "      <th>86630</th>\n",
+       "      <td>AG</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86652</th>\n",
+       "      <td>AI</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86679</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86708</th>\n",
+       "      <td>AM</td>\n",
+       "      <td>2008</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>m</td>\n",
-       "      <td>0-14</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86721</th>\n",
+       "      <td>AN</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86750</th>\n",
+       "      <td>AO</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86779</th>\n",
+       "      <td>AR</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>f</td>\n",
+       "      <td>u</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  country  year  cases gender   age\n",
-       "0      AD  1989    NaN      m  0-14\n",
-       "1      AD  1990    NaN      m  0-14\n",
-       "2      AD  1991    NaN      m  0-14\n",
-       "3      AD  1992    NaN      m  0-14\n",
-       "4      AD  1993    NaN      m  0-14\n",
-       "5      AD  1994    NaN      m  0-14\n",
-       "6      AD  1996    0.0      m  0-14\n",
-       "7      AD  1997    0.0      m  0-14\n",
-       "8      AD  1998    0.0      m  0-14\n",
-       "9      AD  1999    0.0      m  0-14"
+       "      country  year  cases gender age\n",
+       "86553      AD  2008    0.0      f   u\n",
+       "86579      AE  2008    0.0      f   u\n",
+       "86603      AF  2008    NaN      f   u\n",
+       "86630      AG  2008    NaN      f   u\n",
+       "86652      AI  2008    NaN      f   u\n",
+       "86679      AL  2008    NaN      f   u\n",
+       "86708      AM  2008    0.0      f   u\n",
+       "86721      AN  2008    NaN      f   u\n",
+       "86750      AO  2008    0.0      f   u\n",
+       "86779      AR  2008    8.0      f   u"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1392,7 +1416,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-c4895c4654a8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0merror_msg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"The dataframe is not correct.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mcheck1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'fed1d872f6d540f4118582ec694270274e987b12f5dfe2057dddf1e12df2761a'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtop_cases\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'country'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mcheck1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merror_msg\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-68-c4895c4654a8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0merror_msg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"The dataframe is not correct.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mcheck1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'fed1d872f6d540f4118582ec694270274e987b12f5dfe2057dddf1e12df2761a'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtop_cases\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'country'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mcheck1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merror_msg\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m: The dataframe is not correct."
      ]
     }
