--- a/S01/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
+++ b/S01/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -407,7 +407,7 @@
        "9         0.0        NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -924,7 +924,6 @@
     "        pass\n",
     "    elif each >= '65':\n",
     "        age[key] = '65+'\n",
-    "    \n",
     "df_tidy_5= df_tidy_4.copy()\n",
     "df_tidy_5['age']= age\n",
     "    "
@@ -932,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -984,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1006,27 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "duplicates_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1075,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1102,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1151,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1172,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1230,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1247,14 +1226,13 @@
     "# top_cases = ...\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "df_tidy_5.sort_values(by='cases', ascending=False).set_index('cases')\n",
-    "df_tidy_5.drop_duplicates(subset='country', keep='first')\n",
-    "top_cases=df_tidy_5.drop_duplicates(subset='country', keep='last').head(n=10)"
+    "df_tidy_5= df_tidy_4.copy()\n",
+    "top_cases=df_tidy_5.sort_values(by='cases', ascending=False).drop_duplicates(keep='first').head(n=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1287,104 +1265,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>86553</th>\n",
-       "      <td>AD</td>\n",
+       "      <th>19671</th>\n",
+       "      <td>IN</td>\n",
        "      <td>2008</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <td>90498.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>3544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86579</th>\n",
-       "      <td>AE</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <th>19670</th>\n",
+       "      <td>IN</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>88045.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>3544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86603</th>\n",
-       "      <td>AF</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <th>13901</th>\n",
+       "      <td>IN</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>83850.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>2534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86630</th>\n",
-       "      <td>AG</td>\n",
+       "      <th>13902</th>\n",
+       "      <td>IN</td>\n",
        "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <td>83798.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>2534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86652</th>\n",
-       "      <td>AI</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <th>19669</th>\n",
+       "      <td>IN</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>82939.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>3544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86679</th>\n",
-       "      <td>AL</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <th>13900</th>\n",
+       "      <td>IN</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>79037.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>2534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86708</th>\n",
-       "      <td>AM</td>\n",
+       "      <th>25440</th>\n",
+       "      <td>IN</td>\n",
        "      <td>2008</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <td>78815.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>4554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86721</th>\n",
-       "      <td>AN</td>\n",
+       "      <th>8133</th>\n",
+       "      <td>IN</td>\n",
        "      <td>2008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <td>77121.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>1524</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86750</th>\n",
-       "      <td>AO</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <th>19668</th>\n",
+       "      <td>IN</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>76870.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>3544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86779</th>\n",
-       "      <td>AR</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>f</td>\n",
-       "      <td>u</td>\n",
+       "      <th>25439</th>\n",
+       "      <td>IN</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>76408.0</td>\n",
+       "      <td>m</td>\n",
+       "      <td>4554</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      country  year  cases gender age\n",
-       "86553      AD  2008    0.0      f   u\n",
-       "86579      AE  2008    0.0      f   u\n",
-       "86603      AF  2008    NaN      f   u\n",
-       "86630      AG  2008    NaN      f   u\n",
-       "86652      AI  2008    NaN      f   u\n",
-       "86679      AL  2008    NaN      f   u\n",
-       "86708      AM  2008    0.0      f   u\n",
-       "86721      AN  2008    NaN      f   u\n",
-       "86750      AO  2008    0.0      f   u\n",
-       "86779      AR  2008    8.0      f   u"
+       "      country  year    cases gender   age\n",
+       "19671      IN  2008  90498.0      m  3544\n",
+       "19670      IN  2007  88045.0      m  3544\n",
+       "13901      IN  2007  83850.0      m  2534\n",
+       "13902      IN  2008  83798.0      m  2534\n",
+       "19669      IN  2006  82939.0      m  3544\n",
+       "13900      IN  2006  79037.0      m  2534\n",
+       "25440      IN  2008  78815.0      m  4554\n",
+       "8133       IN  2008  77121.0      m  1524\n",
+       "19668      IN  2005  76870.0      m  3544\n",
+       "25439      IN  2007  76408.0      m  4554"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1408,19 +1386,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "The dataframe is not correct.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-68-c4895c4654a8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0merror_msg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"The dataframe is not correct.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mcheck1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'fed1d872f6d540f4118582ec694270274e987b12f5dfe2057dddf1e12df2761a'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtop_cases\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'country'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mcheck1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merror_msg\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m: The dataframe is not correct."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert isinstance(top_cases, pd.DataFrame), \"top_cases should be a pandas DataFrame.\"\n",
     "\n",
