--- a/S01/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
+++ b/S01/SLU06 - Dealing with Data Problems/Exercise notebook.ipynb
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1068,20 +1068,17 @@
    "outputs": [],
    "source": [
     "# Count the number of null values in df_tidy_5\n",
-    "null_count = 0\n",
-    "\n",
     "# YOUR CODE HERE\n",
     "#null_rows=df_tidy_5.columns[df_tidy_5.isnull().any()]\n",
     "#df_tidy_5[null_rows].isnull().sum()\n",
     "\n",
-    "for i in range(len(df_tidy_5.index)) :\n",
-    "    if df_tidy_5.iloc[i].isnull().any():\n",
-    "        null_count+= 1"
+    "mask= df_tidy_5.isnull().any(axis=1)\n",
+    "null_count= int(mask.sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
