--- a/S01/SLU09 - Model Selection and Overfitting/Exercise notebook.ipynb
+++ b/S01/SLU09 - Model Selection and Overfitting/Exercise notebook.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -98,9 +98,7 @@
    },
    "outputs": [],
    "source": [
-    "# import ... \n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "def implement_hold_out_method(X, y, test_size=.4, random_state=0):\n",
     "    \"\"\" \n",
@@ -123,14 +121,14 @@
     "    # use named arguments, such as test_size=... and random_state=...\n",
     "    # X_train, X_test, y_train, y_test = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=random_state)\n",
     "    \n",
     "    return X_train, X_test, y_train, y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -182,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -218,29 +216,27 @@
     "    # use train_test_split to split the full dataset into\n",
     "    # - temp (as in \"temporary\", as we will split it again) \n",
     "    # - test\n",
-    "    # X_temp, X_test, y_temp, y_test = ... (1 line)\n",
+    "    X_temp, X_test, y_temp, y_test = train_test_split(X, y, test_size= test_size, random_state=random_state)\n",
+    "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # Great, so now we want to split temp into train and validation. \n",
     "    # But what should the \"test_size\" be when we use the train_test_split function, \n",
     "    # so that we end up with 50%-25%-25%?\n",
     "    # Clue: you can probably use a simple rule for this one\n",
-    "    # the_right_val_size = ... (1 line)\n",
+    "    the_right_val_size = 1/3\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # use train_test_split to create the train and validation datasets\n",
-    "    # X_train, X_val, y_train, y_val = ... (1 line)\n",
+    "    X_train, X_val, y_train, y_val = train_test_split(X_temp, y_temp, test_size= the_right_val_size, random_state=random_state)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    return X_train, X_test, X_val, y_train, y_test, y_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -315,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -326,30 +322,45 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mafal\\Anaconda3\\envs\\slu09\\lib\\site-packages\\sklearn\\utils\\validation.py:724: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.model_selection import KFold\n",
+    "\n",
     "# here is your data \n",
     "X_train = pd.read_csv('data/something')\n",
     "y_train_num = pd.read_csv('data/something_else', header=None)\n",
     "y_train_cat = y_train_num.apply(lambda x: x < 50).astype('int')\n",
     "\n",
     "# here are your models\n",
-    "lin_reg = LinearRegression()\n",
-    "log_reg = LogisticRegression(solver='liblinear')\n",
+    "lin_reg = LinearRegression().fit(X_train, y_train_num)\n",
+    "log_reg = LogisticRegression(solver='liblinear').fit(X_train, y_train_cat)\n",
     "\n",
     "# store the mean cross val scores as lin_reg_result and log_reg_result\n",
     "# use y_train_num for linear regression\n",
     "# use y_train_cat for logistic regression\n",
-    "# lin_reg_result = ...\n",
-    "# log_reg_result = ...\n",
+    "kf4 = KFold(n_splits=4)\n",
+    "kf4.get_n_splits(y_train_num)\n",
+    "lin_reg_result = lin_reg.score(X_train, y_train_num)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "kf6 = KFold(n_splits=6)\n",
+    "kf6.get_n_splits(y_train_cat)\n",
+    "log_reg_result = log_reg.score(X_train, y_train_cat)\n",
+    "\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -362,7 +373,20 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "\nArrays are not almost equal to 3 decimals\n ACTUAL: 0.04783795791873069\n DESIRED: -0.1477",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-46-af20f010fc4a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtesting\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0massert_almost_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlin_reg_result\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m0.1477\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtesting\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0massert_almost_equal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlog_reg_result\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.5333\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\slu09\\lib\\site-packages\\numpy\\testing\\_private\\utils.py\u001b[0m in \u001b[0;36massert_almost_equal\u001b[1;34m(actual, desired, decimal, err_msg, verbose)\u001b[0m\n\u001b[0;32m    586\u001b[0m         \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    587\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdesired\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mactual\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m1.5\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m10.0\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mdecimal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 588\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_build_err_msg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    589\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    590\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: \nArrays are not almost equal to 3 decimals\n ACTUAL: 0.04783795791873069\n DESIRED: -0.1477"
+     ]
+    }
+   ],
    "source": [
     "np.testing.assert_almost_equal(lin_reg_result, -0.1477, 3)\n",
     "np.testing.assert_almost_equal(log_reg_result, 0.5333, 3)"
@@ -387,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -472,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -496,17 +520,23 @@
     "    Returns:\n",
     "        Mean squared error : float\n",
     "    \"\"\"\n",
-    "\n",
-    "    # mse = ...\n",
+    "    e= list(map(lambda x, y: x-y , y, y_hat))\n",
+    "    # Now, square the difference\n",
+    "    # s = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    s= list(map(lambda x: x**2, e))\n",
+    "    # Finally, take the mean and return the error\n",
+    "    mse= np.mean(s)\n",
+    "    #mse = \n",
+    "    #lambda y, y_hat: ((y - y_hat)**2).mean()\n",
+    "    # YOUR CODE HERE\n",
     "    \n",
     "    return mse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -546,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -579,26 +609,24 @@
     "        \n",
     "    # Compute the mean squared error loss part of the general loss function.\n",
     "    # Hint: use the function we created above\n",
-    "    # mse = ...\n",
+    "    mse = mean_squared_error(y, y_hat)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # Compute the L1 part of the general loss function.\n",
-    "    # l1 = ...\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    l1 = 0\n",
+    "    for each in betas[1:]:\n",
+    "        l1+= abs(each)*lamb1\n",
     "    \n",
     "    # Compute the total loss by combining the parts.\n",
-    "    # L = ...\n",
+    "    L = mse + l1\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    return L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -660,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -693,26 +721,25 @@
     "    \n",
     "    # Compute the mean squared error loss part of the general loss function.\n",
     "    # Hint: use the function we created above\n",
-    "    # mse = ...\n",
+    "    mse = mean_squared_error(y, y_hat)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # Compute the L2 part of the general loss function.\n",
-    "    # l2 = ...\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    l2 = 0\n",
+    "    for each in betas[1:]:\n",
+    "        l2+= (each**2)*lamb2\n",
     "    \n",
     "    # Compute the total loss by combining the parts.\n",
-    "    # L = ...\n",
+    "    L = mse + l2\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
     "    \n",
     "    return L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -772,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -797,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -810,9 +837,8 @@
    },
    "outputs": [],
    "source": [
-    "# import ... \n",
+    "from sklearn.linear_model import Lasso\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
     "\n",
     "def lasso_regression(X, y, lamb):\n",
     "    \"\"\"\n",
@@ -830,20 +856,22 @@
     "    # instantiate an instance of sklearn's Lasso model\n",
     "    # use named arguments, such as alpha=... and random_state=...\n",
     "    # use a random state of 42\n",
+    "    lasso = Lasso(normalize=False, alpha= lamb, random_state= 42)\n",
+    "    lasso.fit(X, y)\n",
+    "    \n",
+    "\n",
     "    # lasso = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    # fit model\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    return lasso"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -888,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -901,9 +929,7 @@
    },
    "outputs": [],
    "source": [
-    "# import ... \n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "from sklearn.linear_model import Ridge# YOUR CODE HERE\n",
     "\n",
     "def ridge_regression(X, y, lamb):\n",
     "    \"\"\"\n",
@@ -921,20 +947,18 @@
     "    # instantiate an instance of sklearn's Ridge model\n",
     "    # use named arguments, such as alpha=... and random_state=...\n",
     "    # use a random state of 42\n",
-    "    # ridge = ...\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
+    "    ridge = Ridge(normalize=False, alpha=lamb, random_state=42)\n",
+    "    ridge.fit(X, y)    \n",
     "    # fit model\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    return ridge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -979,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -992,9 +1016,7 @@
    },
    "outputs": [],
    "source": [
-    "# import ... \n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "from sklearn.linear_model import ElasticNet\n",
     "\n",
     "def elasticnet_regression(X, y, lamb, l1_ratio):\n",
     "    \"\"\"\n",
@@ -1014,19 +1036,18 @@
     "    # use named arguments, such as alpha=..., l1_ratio=..., and random_state=...\n",
     "    # use a random state of 42\n",
     "    # elasticnet = ...\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
+    "        # YOUR CODE HERE\n",
+    "    elasticnet = ElasticNet(normalize=False, alpha=lamb, l1_ratio=l1_ratio, random_state=42)\n",
+    "    elasticnet.fit(X, y)    \n",
     "    # fit model\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "    \n",
     "    return elasticnet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "deletable": false,
     "editable": false,
